# devrel-examples

./: .gitignore  LICENSE  package-lock.json
java/events_slack_notifications/: README.md  pom.xml
javascript/export-project-statuses-to-CSV/: README.md  index.html  index.js
javascript/hello_world/: README.md  hello_world.js
javascript/hello_world_v3/: README.md
javascript/node-oauth-demo/: .env-example  README.md  index.js  package-lock.json  package.json
javascript/pkce_oauth/: README.md
javascript/portfolio-to-csv-export/: README.md  index.html  index.js  portfolio-export.html  style.css  utils.js
javascript/powercommand_using_SDKv3/: README.md  asana_power.js  command_runner.js  connection_settings.js  package-lock.json  package.json  task_client_filter.js  task_provider.js
javascript/powercommands/: LICENSE  README.md  asana_power.js  command_runner.js  package-lock.json  package.json  task_client_filter.js  task_provider.js
javascript/powercommands_using_SDKv3/: LICENSE
python/goals-api-sfdc/: .coveragerc  .gitignore  Dockerfile  README (original).md  README.md  config.example.toml  setup.cfg  setup.py  tox.ini
python/goals-api-sfdc/src/asana_goals/: __main__.py  initializer.py
python/goals-api-sfdc/src/asana_goals/asana/: __init__.py  client.py  goal.py
python/goals-api-sfdc/src/asana_goals/data_source/salesforce/: __init__.py  client.py  report.py
python/goals-api-sfdc/src/asana_goals/util/: bearer_auth.py  log_requests.py
python/goals-api-sfdc/test/: test_asana_client.py  test_main.py  test_salesforce_client.py
(+66 files in other folders)
